aws/kube-manifest/prod-fe-company-profile-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: isolution-app
  name: fe-company-profile-deployment
  labels:
    app: fe-company-profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-company-profile
      env: prod
      checks: passed
  template:
    metadata:
      labels:
        app: fe-company-profile
        env: prod
        checks: passed
    spec:
      containers:
      - name: fe-company-profile
        image: ecr_image
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 250m
