aws/kube-manifest/prod-fe-company-profile-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-company-profile-service
  namespace: isolution-app
spec:
  type: NodePort
  selector:
    app: fe-company-profile
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
